# autorisk-rm

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_CONTRACT.md  DATA_SOURCES.md  KEYS.md  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: audit-grade-e2e.yml
.streamlit/: config.toml
autorisk/: __init__.py  cli.py  pipeline.py  ranking.py
autorisk/audit/: __init__.py  _crypto.py  _pack_locator.py  _zip_utils.py  attestation.py  contracts.py  handoff.py  handoff_verify.py  pack.py  sign.py  validate.py  verifier_bundle.py  verify.py
autorisk/cli_commands/: __init__.py  audit.py  multi_video.py
autorisk/cosmos/: __init__.py  api_client.py  grounding.py  infer.py  local_client.py  predict_client.py  prompt.py  schema.py
autorisk/dashboard/: app.py  comparison_utils.py  data_loader.py  search_utils.py
autorisk/eval/: __init__.py  ablation.py  analysis.py  calibration.py  checklist.py  enhanced_correction.py  evaluator.py  metrics.py
autorisk/mining/: __init__.py  audio.py  base.py  fuse.py  motion.py  proximity.py  tracking.py
autorisk/multi_video/: __init__.py  runner.py  submission_metrics.py  validate.py
autorisk/policy/: __init__.py  (+1 more)
configs/: default.yaml  japan.yaml  policy.yaml  public.yaml  public_v4.yaml  retry.yaml  us_highway.yaml  winter.yaml
schemas/: attestation.schema.json  policy_snapshot.schema.json  review_apply_report.schema.json  review_diff_report.schema.json  review_log_entry.schema.json  submission_metrics.schema.json
scripts/: download_public_data.py  evaluate_sft.py  evaluate_v4.py  gen_realistic_video.py  generate_submission_metrics.py  judge_run.ps1  judge_run.sh  prepare_sft_data.py  run_all_inference.py  run_counterfactual.py  run_multi_video.py  run_predict2.py  run_sft_lora.py
tests/: conftest.py  test_audit_contracts.py  test_audit_handoff.py  test_audit_handoff_verify.py  test_audit_sign.py  test_audit_validate.py  test_audit_verify.py  test_cli_registry.py  test_counterfactual.py  test_dashboard_comparison_utils.py  test_dashboard_data_loader.py  test_dashboard_search_utils.py  test_download_public_data.py  test_enhanced_correction.py  test_finalize_run_cli.py  test_multi_video_cli.py  test_multi_video_runner.py  test_multi_video_submission_metrics.py  test_multi_video_validate.py  test_narrative_cli.py  test_packaged_resources.py  test_policy_check.py  test_predict_client.py  test_review_flow.py  test_safety_narrative.py  test_video_sources.py
(+42 files in other folders)
