[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorisk-rm"
version = "0.1.0"
description = "AutoRisk-RM: Automated Risk Mining from Dashcam Videos with NVIDIA Cosmos Reason 2"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "scipy>=1.11",
    "Jinja2>=3.1",
    "click>=8.1",
    "pydantic>=2.5",
    "omegaconf>=2.3",
    "transformers>=4.40",
    "openai>=1.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "cryptography>=42.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "yt-dlp>=2024.1",
    "ruff>=0.9",
    "mypy>=1.12",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.scripts]
autorisk = "autorisk.cli:cli"

[tool.setuptools.packages.find]
include = ["autorisk*"]

[tool.setuptools.package-data]
"autorisk.resources.schemas" = ["*.json"]
"autorisk.resources.configs" = ["*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
